# SwissTextSDG

./: .gitignore  README.md  analysis.ipynb  annotation_on_test.ipynb  extract_fulltext.py  helper.py  launch.json  preprocessing.ipynb  preprocessing.py  pyproject.toml  requirements.txt
Llama2/: output.txt
Mistral/: classification_results.csv  eval_classification_with_mistral.ipynb
QLORA/: test_qlora.ipynb
RAG/data/: sdg_classification_guidelines.csv
RAG/notebooks/: classification_openai_with_qdrant.ipynb  results_with_RAG.csv
data/: extract_fulltext.py  helper.py  sdg_label_mapping.json  settings_dist.py
data/OSDG/: citing_works_OSDG.csv  citing_works_OSDG_analysis.py  osdg_utils.py  responses_dict.pkl
data/pdf/: closed_pdfs.txt
data/predictions/: predictions_test.jsonl  run_desc.md
data/preprocessed/: task1_train_doi.jsonl
data/raw/: sgd_label_subtargets.json
results/aspect_acl_scibert_seed_0_combined_OSDG_swisstext_enlarged_OSDG_enlarged_swisstext/: aspect_acl_scibert__prediction_log__ep5.csv
results/biobert_seed_0_combined_OSDG_swisstext_enlarged_OSDG_enlarged_swisstext/: biobert__prediction_log__ep5.csv
results/ensemble_majority_voting/: ensemble__prediction_log__ep5.csv
results/ensemble_majority_voting_w_probs/: ensemble__prediction_log__ep5.csv
scripts/: analyze_correlations.ipynb  analyze_data.ipynb  analyze_prediction_log.py  compare_models_per_class_LLM.py  confusion_matrices.ipynb  confusion_matrix.py  confusion_matrix_LLM.py  evaluate_transformer_model.py  plot_metrics.py  plot_metrics_LLM.py
src/data/: data_config.py  (+5 more)
(+59 files in other folders)
