[tool.poetry]
name = "swisstextsdg"
version = "0.1.0"
description = ""
authors = ["shtosti <hanna.hubarava@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.16.2"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
mistralai = "^0.1.8"
faiss-cpu = "^1.8.0"
torch = "^2.2.2"
datasets = "^2.18.0"
accelerate = "^0.29.2"
peft = "^0.10.0"
bitsandbytes = "0.40.2"
trl = "0.4.7"
transformers = "^4.39.3"
scipy = "^1.13.0"
qdrant-client = "^1.8.2"
sentence-transformers = "^2.6.1"
scikit-learn = "^1.4.1.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
